k8s/mx-bank-currency-exchange-mysql-deployment.yaml
# k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mx-bank-currency-exchange-mysql
  namespace: mx-bank
spec:
  selector:
    matchLabels:
      app: mx-bank-currency-exchange-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mx-bank-currency-exchange-mysql
    spec:
      containers:
        - image: mysql:8.0
          name: mx-bank-currency-exchange-mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mx-bank-currency-exchange-mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mx-bank-currency-exchange-mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mx-bank-currency-exchange-mysql-pv-claim
