k8s/mx-bank-ms-currency-exchange-deployment.yaml
# k8s/mx-bank-ms-currency-exchange-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mx-bank-ms-currency-exchange
  namespace: mx-bank
  labels:
    app: mx-bank-ms-currency-exchange
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mx-bank-ms-currency-exchange
  template:
    metadata:
      labels:
        app: mx-bank-ms-currency-exchange
    spec:
      containers:
        - name: mx-bank-ms-currency-exchange
          image: mx-bank-ms-currency-exchange:1.0.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
      volumes:
        - name: config-volume
          configMap:
            name: mx-bank-ms-currency-exchange-config
