k8s/mx-bank-currency-exchange-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mx-bank-currency-exchange-mysql
  namespace: mx-bank
spec:
  ports:
    - port: 3306
  selector:
    app: mx-bank-currency-exchange-mysql
