k8s/mx-bank-currency-exchange-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mx-bank-currency-exchange-rabbitmq
  namespace: mx-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mx-bank-currency-exchange-rabbitmq
  template:
    metadata:
      labels:
        app: mx-bank-currency-exchange-rabbitmq
    spec:
      containers:
        - name: mx-bank-currency-exchange-rabbitmq
          image: rabbitmq:4.0-management
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: management
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mx-bank-currency-exchange-rabbitmq
  namespace: mx-bank
spec:
  type: NodePort
  selector:
    app: mx-bank-currency-exchange-rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
      nodePort: 31572
