k8s/mx-bank-ms-currency-exchange-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mx-bank-ms-currency-exchange
  namespace: mx-bank
spec:
  type: NodePort
  selector:
    app: mx-bank-ms-currency-exchange
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
