k8s/mx-bank-currency-exchange-rabbitmq-ingress.yaml
# k8s/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mx-bank-currency-exchange-rabbitmq-ingress
  namespace: mx-bank
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mx-bank-currency-exchange-rabbitmq
                port:
                  number: 15672
